src/app/components/projects-grid/projects-grid.scss
@use '../../../shared' as *; 

.project-grid {
    padding: 30px;
    padding-top: 15px;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 15px;
}

.project-card{ 
    border-radius: 0px;
    background-color: transparent;
    
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
    transition: all 0.3s;
    margin-bottom: 40px;
    height: clamp(200px, 70vh, 1500px);
    overflow: hidden;
    cursor: pointer;
}

.project-card:hover{
    border-radius: 16px;
    padding-bottom: 20px;
    // background-color: #b5b5b54d;
    transition: all 0.3s;
}

/* 1st item (formerly .div1) */
.project-card:nth-child(1) {
    grid-column: span 3 / span 3;
}

/* 2nd item (formerly .div2) */
.project-card:nth-child(2) {
    grid-row: span 2 / span 2;
    grid-row-start: 2;
}

/* 3rd item (formerly .div4) */
.project-card:nth-child(3) {
    grid-row: span 2 / span 2;
    grid-row-start: 2;
}

/* 4th item (formerly .div5) */
.project-card:nth-child(4) {
    grid-row: span 2 / span 2;
    grid-row-start: 2;
}

h3 {
    font-weight: 600;
    font-size: 40px;
    margin-bottom: 0;
}

p {
    font-weight: 400;
    font-size: 25px;
    margin-bottom: 0;
}

img {
    border-radius: 16px;
    width: auto;
    height: 100%;
    max-width: 100%;
    max-height: 90%;
    object-fit: cover;
    margin-bottom: 10px;
}

